[gd_scene load_steps=6 format=3 uid="uid://cryi2oimxnjhl"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Quick_Connect/Quick_Connect.gd" id="1_o7x5a"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TitleBar/TitleBar.tscn" id="2_t1guh"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Quick_Connect/morphology_menulist.gd" id="4_g5jb3"]
[ext_resource type="PackedScene" uid="uid://cujhi16cmpffu" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Scroll/Scroll_Vertical.tscn" id="4_xt0qq"]
[ext_resource type="Texture2D" uid="uid://chq0itxpcf2tb" path="res://Feagi-Godot-Interface/UI/Resources/morphology_icons/lateral_+x.png" id="5_esdrl"]

[node name="Quick_Connect" type="Panel"]
anchors_preset = -1
anchor_right = 0.315104
anchor_bottom = 0.234568
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7x5a")
metadata/_edit_use_anchors_ = true

[node name="TitleBar" parent="." instance=ExtResource("2_t1guh")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2

[node name="morphology_menulist" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.00018
offset_top = -73.0
offset_right = 248.0
offset_bottom = 375.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_g5jb3")

[node name="Label" type="Label" parent="morphology_menulist"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Pick a morphology"
horizontal_alignment = 1

[node name="Scroll_Vertical" parent="morphology_menulist" instance=ExtResource("4_xt0qq")]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
offset_top = 25.0
offset_right = 246.0
offset_bottom = 451.0

[node name="VBoxContainer" parent="morphology_menulist/Scroll_Vertical" index="0"]
custom_minimum_size = Vector2(240, 0)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="morphology_menulist/Scroll_Vertical/VBoxContainer" index="0"]
visible = false
custom_minimum_size = Vector2(60, 200)
layout_mode = 2
texture_normal = ExtResource("5_esdrl")
ignore_texture_size = true
stretch_mode = 0

[node name="Button_morp" type="Button" parent="morphology_menulist/Scroll_Vertical/VBoxContainer" index="1"]
visible = false
custom_minimum_size = Vector2(60, 200)
layout_mode = 2

[node name="arrow" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -19.5
offset_right = 55.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="arrow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -13.0
offset_right = 79.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Select a morphology"

[node name="source" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 61.0
offset_bottom = 15.5
grow_vertical = 2
text = "Source"

[node name="destination" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Destination
"

[node name="connect" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -31.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0
text = "Connect"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="arrow" to="." method="_on_arrow_pressed"]
[connection signal="pressed" from="connect" to="." method="_on_connect_pressed"]

[editable path="morphology_menulist/Scroll_Vertical"]
